--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -31,9 +31,9 @@ services:
       # So you don't have to use root, but you can if you like
       MYSQL_USER: 'user'
       # You can use whatever password you like
-      MYSQL_PASSWORD: 'Password'
+      MYSQL_PASSWORD: 'password'
       # Password for root access
-      MYSQL_ROOT_PASSWORD: 'Password'
+      MYSQL_ROOT_PASSWORD: 'password'
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3306:3306'
