--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     volumes:
       - my-db:/var/lib/mysql
 # Names our volume
-  receiver:
+  reciever:
     image: reciever
     ports:
       - "8080:8080"
